--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "bootstrap": "^5.2.1",
+    "countries-list": "^2.6.1",
     "framer-motion": "^6.5.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
